<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.cliente.PaginaActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="129dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include"
            app:srcCompat="@color/colorPrimaryDark" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="184dp"
            android:layout_height="169dp"
            android:layout_marginTop="96dp"
            android:src="@drawable/perfil"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCategoriaPagina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categoria"
            android:textColor="#AB000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomePagina" />

        <TextView
            android:id="@+id/textViewNomePagina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome da Empresa"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategoriaPagina">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Pessoas na fila:"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPessoasInseridas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="nenhuma"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="480dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sobre"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textViewSobre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/About" />

            <include
                layout="@layout/divisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Faixa de preço"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FaixaDePreco"
                android:textColor="#AB000000"
                android:textSize="14sp" />

            <include
                layout="@layout/divisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Horário"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Horario"
                android:textColor="#AB000000"
                android:textSize="14sp" />

            <include
                layout="@layout/divisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Formas de pagamento"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FormasDePagamento"
                android:textColor="#AB000000"
                android:textSize="14sp" />

            <include
                layout="@layout/divisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Informações adicionais"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewInformacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InformacoesAdicionais"
                android:textColor="#AB000000"
                android:textSize="14sp" />

            <include
                layout="@layout/divisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contato"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewContato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contato"
                android:textColor="#AB000000"
                android:textSize="14sp" />

            <include
                layout="@layout/divisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewSeparador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewPagina"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>